trying fix reveal animation on mobile browsers such as Telegram and chrome

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -68,21 +68,6 @@
   top: 0;
 }
 
-.fenceLeft,
-.fenceRight {
-  position: fixed;
-}
-
-.treeLeft,
-.fenceLeft {
-  left: -100%;
-}
-
-.treeLeft,
-.fenceRight {
-  right: -100%;
-}
-
 .ghost {
   width: 120px;
   left: -120px;
